changes to dockerfile

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -2,7 +2,7 @@
 /* Write your global styles here, in PostCSS syntax */
 @font-face {
   font-family: Fira Code;
-  src: url('static/FiraCode-Regular.ttf');
+  src: url('/FiraCode-Regular.ttf');
 }
 @tailwind components;
 @tailwind utilities
